--- a/mobile/src/main/res/layout/fragment_game.xml
+++ b/mobile/src/main/res/layout/fragment_game.xml
@@ -12,9 +12,9 @@ xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="@dimen/activity_horizontal_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    tools:context="net.famcash.doogulshooter.counter.GameFragment">
+    tools:context="net.famcash.doogulshooter.doogulshooter.counter.GameFragment">
 
     <TextView
         android:id="@+id/txt_score"
