--- a/mobile/src/main/res/layout/fragment_game.xml
+++ b/mobile/src/main/res/layout/fragment_game.xml
@@ -26,7 +26,7 @@ xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/btn_start_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start"/>
+        android:text="@string/stop"/>
 
     <Button
         android:id="@+id/btn_play_pause"
