--- a/mobile/src/main/res/layout/fragment_game.xml
+++ b/mobile/src/main/res/layout/fragment_game.xml
@@ -5,32 +5,31 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_ds"
     tools:context="net.famcash.doogulshooter.doogulshooter.counter.GameFragment/RelativeLayout-->
-<LinearLayout
+<FrameLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 
 xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     tools:context="net.famcash.doogulshooter.doogulshooter.counter.GameFragment">
 
     <TextView
+        android:layout_gravity="top|left"
         android:id="@+id/txt_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
     <Button
-        android:id="@+id/btn_start_stop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/stop"/>
-
-    <Button
+        android:layout_gravity="top|right"
         android:id="@+id/btn_play_pause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pause"/>
-</LinearLayout>
+
+    <include layout="@layout/view_vjoystick" />
+</FrameLayout>
